--- a/client/package.json
+++ b/client/package.json
@@ -7,6 +7,7 @@
     "react": "^16.8.3",
     "react-dom": "^16.8.3",
     "react-redux": "^5.1.1",
+    "react-router-dom": "^4.3.1",
     "react-scripts": "^2.1.5",
     "redux": "^3.7.2",
     "redux-thunk": "^2.3.0"
