--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "concurrently": "^3.6.1",
     "express": "^4.16.4",
-    "nodemon": "^1.14.7"
+    "nodemon": "^1.14.7",
+    "react-router-dom": "^4.3.1"
   }
 }
