--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "reactexpress",
   "version": "1.0.0",
-  "description": "Starter kit for creating React/Redux and Express apps",
+  "description": "Starter kit for creating React/Context and Express apps",
   "main": "server.js",
   "scripts": {
     "client-install": "cd client && npm install",
@@ -10,8 +10,8 @@
     "client": "npm start --prefix client",
     "dev": "concurrently \"npm run server\" \"npm run client\""
   },
-  "author": "Brad Traversy & Gregory Assasie",
-  "license": "MIT",
+  "author": "Rodion",
+  "license": "",
   "devDependencies": {},
   "dependencies": {
     "concurrently": "^3.6.1",
