--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "license": "",
   "devDependencies": {},
   "dependencies": {
+    "axios": "^0.18.0",
     "concurrently": "^3.6.1",
     "express": "^4.16.4",
     "nodemon": "^1.14.7",
